Solved z-index issue with search modal.

--- a/src/Components/SearchBar/SearchBar.css
+++ b/src/Components/SearchBar/SearchBar.css
@@ -9,10 +9,12 @@ form{
     display: flex;
     height: 3em;
     width: 10em;
-    border-radius: 0.45rem;
     padding: .15em .75em;
+    border-radius: 0.45rem;
+    box-shadow: 5px 8px 15px 1px rgba(0, 0, 0, 0.5);
     top: 3.25em;
-    right: 3em;
+    right: 2.25em;
+    z-index: 2;
     /* display: none; */
 }
 input[type=search]{
@@ -22,7 +24,8 @@ input[type=search]{
     height: 2em;
     border-radius: 0.25em;
     width: 10rem;
-    box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.533);
+    outline: 0;
+    box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.5);
 }
 button{
     background: none;
